--- a/css/main.css
+++ b/css/main.css
@@ -1296,3 +1296,12 @@ body::-webkit-scrollbar{
  /* border-right: 5px solid #fff; */
 
 }
+
+
+/* ==========================================================================
+  16. custom-style
+  ========================================================================== */
+
+.btn-more {
+  padding-top: 30px;
+}
