--- a/css/main.css
+++ b/css/main.css
@@ -990,10 +990,10 @@ button:focus {
 }
 
 .testimonial-item img {
-  width: 80px;
+  width: 200px;
   border: 3px solid #fff;
-  height: 80px;
-  border-radius: 50%;
+  height: 200px;
+  /* border-radius: 50%; */
 }
 
 .testimonial-item .testimonial-text h3 {
