--- a/css/main.css
+++ b/css/main.css
@@ -1306,6 +1306,8 @@ body::-webkit-scrollbar{
   padding-top: 30px;
 }
 
+/* Divisão Serviços */
+
 #linhalateral {
   border-right:  1px solid #bdbdbd;
 }
